Bug 1282431 - Clarify error message for redeclaration of class. r=arai